--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <br>
     <button onclick="login()">Login</button>
 
+    <div id="userInfo" style="display: none;">
+        <h2>User Information</h2>
+        <p><strong>Username:</strong> <span id="userUsername"></span></p>
+        <p><strong>Verified:</strong> <span id="userVerified"></span></p>
+    </div>
+
     <script src="account.js"></script>
     <script src="script.js"></script>
 </body>
