--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
             <a href="https://jjsal1234.github.io/Coolsite/sites">Other Sites</a>
         </div>
         <img src="https://cdn.discordapp.com/attachments/1061160749524860949/1176278993683619990/ei_1700517095364-removebg-preview.png?ex=656e4a2e&is=655bd52e&hm=91dfd7c21d00cb1e75004c8c83b00496209f3f277b0d017eeacf5b05659913a1&" alt="Logo">
+        <button id="signInButton" onclick="openSignInPopup()">Sign In</button>
+        <button id="profileButton" style="display:none;" onclick="openProfilePopup()">Profile</button>
     </nav>
 
     <div class="container">
         <h1>Welcome to our Game Development Website!</h1>
         <p>Explore the world of game development with us.</p>
-        <button onclick="openSignInPopup()">Sign In</button>
     </div>
 
     <!-- Sign-in Popup -->
@@ -39,6 +40,7 @@
             <span class="close" onclick="closeProfilePopup()">&times;</span>
             <h2>Profile</h2>
             <p id="profileInfo">Username: <span id="profileUsername"></span><br>Verified: <span id="profileVerified"></span></p>
+            <button onclick="signOut()">Sign Out</button>
         </div>
     </div>
 
