--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         <p>Explore the world of game development with us.</p>
     </div>
 
+    <!-- Leaderboard Section -->
+    <div id="leaderboard" class="container">
+        <h2>Leaderboard</h2>
+        <ul id="leaderboardList"></ul>
+    </div>
+
     <!-- Sign-in Popup -->
     <div id="signInPopup" class="popup">
         <div class="popup-content">
