--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <a href="https://jjsal1234.github.io/Coolsite/">Home</a>
             <a href="https://jjsal1234.github.io/Coolsite/games">Games</a>
             <a href="https://jjsal1234.github.io/Coolsite/sites">Other Sites</a>
+            <button id="leaderboardButton" onclick="openLeaderboardPopup()">Leaderboard</button>
         </div>
         <img src="https://cdn.discordapp.com/attachments/1061160749524860949/1176278993683619990/ei_1700517095364-removebg-preview.png?ex=656e4a2e&is=655bd52e&hm=91dfd7c21d00cb1e75004c8c83b00496209f3f277b0d017eeacf5b05659913a1&" alt="Logo">
         <button id="signInButton" onclick="openSignInPopup()">Sign In</button>
@@ -23,10 +24,13 @@
         <p>Explore the world of game development with us.</p>
     </div>
 
-    <!-- Leaderboard Section -->
-    <div id="leaderboard" class="container">
-        <h2>Leaderboard</h2>
-        <ul id="leaderboardList"></ul>
+    <!-- Leaderboard Popup -->
+    <div id="leaderboardPopup" class="popup">
+        <div class="popup-content">
+            <span class="close" onclick="closeLeaderboardPopup()">&times;</span>
+            <h2>Leaderboard</h2>
+            <ul id="leaderboardList"></ul>
+        </div>
     </div>
 
     <!-- Sign-in Popup -->
