--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div id="leaderboardPopup" class="popup">
         <div class="popup-content">
             <span class="close" onclick="closeLeaderboardPopup()">&times;</span>
-            <h2>Leaderboard</h2>
-            <ul id="leaderboardList"></ul>
+            <h2 style="font-size: 24px;">Leaderboard</h2>
+            <ul id="leaderboardList" style="font-size: 18px;"></ul>
         </div>
     </div>
 
