--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button id="leaderboardButton" onclick="openLeaderboardPopup()">Leaderboard</button>
         </div>
         <img src="https://cdn.discordapp.com/attachments/1061160749524860949/1176278993683619990/ei_1700517095364-removebg-preview.png?ex=656e4a2e&is=655bd52e&hm=91dfd7c21d00cb1e75004c8c83b00496209f3f277b0d017eeacf5b05659913a1&" alt="Logo">
-        <span id="profileText" style="margin-right: 10px;"></span>
+        <span id="profileText" style="color: white; margin-right: 10px;"></span>
         <button id="signInButton" onclick="openSignInPopup()">Sign In</button>
         <button id="profileButton" style="display:none;" onclick="openProfilePopup()">Profile</button>
     </nav>
