--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
             <button id="leaderboardButton" onclick="openLeaderboardPopup()">Leaderboard</button>
         </div>
         <img src="https://cdn.discordapp.com/attachments/1061160749524860949/1176278993683619990/ei_1700517095364-removebg-preview.png?ex=656e4a2e&is=655bd52e&hm=91dfd7c21d00cb1e75004c8c83b00496209f3f277b0d017eeacf5b05659913a1&" alt="Logo">
-        <span id="profileInfoText" style="color: white;"></span>
         <button id="signInButton" onclick="openSignInPopup()">Sign In</button>
-        <button id="profileButton" style="display:none;" onclick="openProfilePopup()">Profile</button>
+        <button id="profileButton" style="display:none;" onclick="openProfilePopup()">
+            <span id="profileText" style="color: white;"></span>
+        </button>
     </nav>
 
     <div class="container">
@@ -50,7 +51,8 @@
         <div class="popup-content">
             <span class="close" onclick="closeProfilePopup()">&times;</span>
             <h2>Profile</h2>
-            <p id="profileInfo">Username: <span id="profileUsername"></span><br>Verified: <span id="profileVerified"></span></p>
+            <p id="profileUsername"></p>
+            <p id="profileVerified"></p>
             <button onclick="signOut()">Sign Out</button>
         </div>
     </div>
