--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <img src="https://cdn.discordapp.com/attachments/1061160749524860949/1176278993683619990/ei_1700517095364-removebg-preview.png?ex=656e4a2e&is=655bd52e&hm=91dfd7c21d00cb1e75004c8c83b00496209f3f277b0d017eeacf5b05659913a1&" alt="Logo" style="width: 30px; height: 30px; margin-left: 10px; margin-top: 5px;">
 
         <!-- Navigation Buttons -->
+        <a href="https://jjsal1234.github.io/Coolsite/" style="text-decoration: none; color: white;"><button>Home</button></a>
+        <a href="https://jjsal1234.github.io/Coolsite/games" style="text-decoration: none; color: white;"><button>Games</button></a>
+        <a href="https://jjsal1234.github.io/Coolsite/sites" style="text-decoration: none; color: white;"><button>Other Sites</button></a>
         <button onclick="openLeaderboardPopup()">Leaderboard</button>
         <button onclick="openSignInPopup()">Sign In</button>
         <button onclick="openProfilePopup()" id="profileButton" style="display: none;">Profile</button>
