--- a/index.html
+++ b/index.html
@@ -1,152 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Game Development Website</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Arial', sans-serif;
-            background: #111; /* Dark background color */
-        }
-
-        /* Navigation Bar Styles */
-        #navbar {
-            background: #222; /* Darker background color than the body */
-            overflow: hidden;
-            padding: 15px;
-        }
-
-        #navbar a {
-            float: left;
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            font-size: 18px;
-        }
-
-        #navbar a:hover {
-            background-color: #555; /* Darker color on hover */
-        }
-
-        /* Account Popup Styles */
-        #accountPopup {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: #333; /* Darker background color */
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            z-index: 2;
-        }
-
-        #signInButton,
-        #profileButton {
-            cursor: pointer;
-            color: white;
-            font-size: 18px;
-            text-decoration: none;
-            padding: 14px 16px;
-            display: inline-block;
-        }
-
-        #profileText {
-            display: none;
-        }
-
-        #profileText img {
-            width: 20px;
-            height: 20px;
-            margin-left: 5px;
-            margin-top: -3px;
-        }
-
-        /* Leaderboard Popup Styles */
-        #leaderboardPopup {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: #333; /* Darker background color */
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            z-index: 2;
-        }
-
-        #leaderboardList {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        #leaderboardList li {
-            margin-bottom: 10px;
-        }
-
-        #leaderboardList a {
-            color: white;
-            text-decoration: none;
-            font-size: 18px;
-            display: inline-block;
-            padding: 5px;
-        }
-
-        #leaderboardList a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <title>Game Development</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
+    <nav>
+        <div>
+            <a href="https://jjsal1234.github.io/Coolsite/">Home</a>
+            <a href="https://jjsal1234.github.io/Coolsite/games">Games</a>
+            <a href="https://jjsal1234.github.io/Coolsite/sites">Other Sites</a>
+            <button id="leaderboardButton" onclick="openLeaderboardPopup()">Leaderboard</button>
+        </div>
+        <img src="https://cdn.discordapp.com/attachments/1061160749524860949/1176278993683619990/ei_1700517095364-removebg-preview.png?ex=656e4a2e&is=655bd52e&hm=91dfd7c21d00cb1e75004c8c83b00496209f3f277b0d017eeacf5b05659913a1&" alt="Logo">
+        <button id="signInButton" onclick="openSignInPopup()">Sign In</button>
+        <button id="profileButton" style="display:none;" onclick="openProfilePopup()">
+            <span id="profileText" style="color: white;"></span>
+        </button>
+    </nav>
 
-    <!-- Navigation Bar -->
-    <div id="navbar">
-        <a href="#">Home</a>
-        <a href="#">Games</a>
-        <a href="#">Other Sites</a>
-        <span id="signInButton" onclick="openSignInPopup()">Sign In</span>
-        <span id="profileButton" onclick="openProfilePopup()">
-            <span id="profileText"></span>
-        </span>
-        <span id="leaderboardButton" onclick="openLeaderboardPopup()">Leaderboard</span>
-    </div>
-
-    <!-- Sign In Popup -->
-    <div id="signInPopup">
-        <!-- Your sign-in form goes here -->
-        <button onclick="signIn()">Sign In</button>
-        <button onclick="closeSignInPopup()">Close</button>
-    </div>
-
-    <!-- Profile Popup -->
-    <div id="profilePopup">
-        <p id="profileUsername"></p>
-        <p id="profileVerified"></p>
-        <button onclick="signOut()">Sign Out</button>
-        <button onclick="closeProfilePopup()">Close</button>
+    <div class="container">
+        <h1>Welcome to our Game Development Website!</h1>
+        <p>Explore the world of game development with us.</p>
     </div>
 
     <!-- Leaderboard Popup -->
-    <div id="leaderboardPopup">
-        <ul id="leaderboardList"></ul>
-        <button onclick="closeLeaderboardPopup()">Close</button>
+    <div id="leaderboardPopup" class="popup">
+        <div class="popup-content">
+            <span class="close" onclick="closeLeaderboardPopup()">&times;</span>
+            <h2 style="font-size: 24px;">Leaderboard</h2>
+            <ul id="leaderboardList" style="font-size: 18px;"></ul>
+        </div>
     </div>
 
-    <!-- Your website content goes here -->
+    <!-- Sign-in Popup -->
+    <div id="signInPopup" class="popup">
+        <div class="popup-content">
+            <span class="close" onclick="closeSignInPopup()">&times;</span>
+            <h2>Sign In</h2>
+            <label for="username">Username:</label>
+            <input type="text" id="username" placeholder="Enter your username">
+            <button onclick="signIn()">Sign In</button>
+        </div>
+    </div>
 
-    <script>
-        // Your JavaScript code goes here
-    </script>
+    <!-- Profile Popup -->
+    <div id="profilePopup" class="popup">
+        <div class="popup-content">
+            <span class="close" onclick="closeProfilePopup()">&times;</span>
+            <h2>Profile</h2>
+            <p id="profileUsername"></p>
+            <p id="profileVerified"></p>
+            <button onclick="signOut()">Sign Out</button>
+        </div>
+    </div>
+
+    <script src="accounts.js"></script>
+    <script src="script.js"></script>
 </body>
-
 </html>
