--- a/index.html
+++ b/index.html
@@ -3,33 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Register/Login</title>
+    <title>Your Game Dev Site</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-image: url('your-custom-background.jpg'); /* Replace with your actual background image URL */
+            background-size: cover;
+            background-position: center;
+            font-family: 'Arial', sans-serif;
+        }
+
+        header {
+            background-color: #333; /* Adjust the color of your navigation bar */
+            padding: 15px;
+            text-align: center;
+        }
+
+        nav {
+            display: flex;
+            justify-content: center;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 18px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Simple Register/Login</h1>
-    
-    <div id="registerForm">
-        <h2>Register</h2>
-        <form onsubmit="register(event)">
-            <label for="username">Username:</label>
-            <input type="text" id="username" required>
-            <label for="password">Password:</label>
-            <input type="password" id="password" required>
-            <button type="submit">Register</button>
-        </form>
-    </div>
+    <header>
+        <h1>Your Game Dev Site</h1>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#games">Games</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
 
-    <div id="loginForm">
-        <h2>Login</h2>
-        <form onsubmit="login(event)">
-            <label for="loginUsername">Username:</label>
-            <input type="text" id="loginUsername" required>
-            <label for="loginPassword">Password:</label>
-            <input type="password" id="loginPassword" required>
-            <button type="submit">Login</button>
-        </form>
-    </div>
+    <!-- Your content goes here -->
+    <section>
+        <h2>Welcome to Your Game Dev Site!</h2>
+        <p>This is where you can showcase and discuss your game development projects.</p>
+    </section>
 
-    <script src="script.js"></script>
+    <!-- Add more sections or content as needed -->
+
 </body>
 </html>
