--- a/index.html
+++ b/index.html
@@ -4,34 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Game Dev Site</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-image: url('your-custom-background.jpg'); /* Replace with your actual background image URL */
-            background-size: cover;
-            background-position: center;
-            font-family: 'Arial', sans-serif;
-        }
-
-        header {
-            background-color: #333; /* Adjust the color of your navigation bar */
-            padding: 15px;
-            text-align: center;
-        }
-
-        nav {
-            display: flex;
-            justify-content: center;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 15px;
-            font-size: 18px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -44,7 +17,6 @@
         </nav>
     </header>
 
-    <!-- Your content goes here -->
     <section>
         <h2>Welcome to Your Game Dev Site!</h2>
         <p>This is where you can showcase and discuss your game development projects.</p>
