--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <header>
-        <h1>Your Game Dev Site</h1>
-        <nav>
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#games">Games</a>
-            <a href="#contact">Contact</a>
-        </nav>
+        <div class="container">
+            <h1>Your Game Dev Site</h1>
+            <nav>
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#games">Games</a>
+                <a href="#contact">Contact</a>
+            </nav>
+        </div>
     </header>
 
     <section>
