--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Game Dev Site</title>
+    <title>Game Development</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Your Game Dev Site</h1>
+            <h1>Game Development</h1>
             <nav>
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
@@ -20,7 +20,7 @@
     </header>
 
     <section>
-        <h2>Welcome to Your Game Dev Site!</h2>
+        <h2>Welcome to Game Development!</h2>
         <p>This is where you can showcase and discuss your game development projects.</p>
     </section>
 
