--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Development</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="auth.js" defer></script>
 </head>
 <body>
     <header>
         <div class="container">
             <h1>Game Development</h1>
-            <nav>
+            <nav id="navbar">
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
                 <a href="#games">Games</a>
                 <a href="#contact">Contact</a>
+                <a href="register.html" id="registerBtn">Register</a>
+                <a href="login.html" id="loginBtn">Login</a>
+                <a href="#" id="logoutBtn" style="display: none;">Logout</a>
             </nav>
         </div>
     </header>
