--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Development</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="auth.js" defer></script>
 </head>
 <body>
     <header>
         <div class="container">
             <h1>Game Development</h1>
-            <nav id="navbar">
+            <nav>
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
                 <a href="#games">Games</a>
                 <a href="#contact">Contact</a>
-                <a href="register.html" id="registerBtn">Register</a>
-                <a href="login.html" id="loginBtn">Login</a>
+                <a href="#" id="loginBtn">Login</a>
                 <a href="#" id="logoutBtn" style="display: none;">Logout</a>
             </nav>
         </div>
@@ -28,7 +26,23 @@
         <p>This is where you can showcase and discuss your game development projects.</p>
     </section>
 
+    <!-- Login Modal -->
+    <div id="loginModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeLoginModal()">&times;</span>
+            <h2>Login</h2>
+            <form id="loginForm">
+                <label for="username">Username:</label>
+                <input type="text" id="username" required>
+                <label for="password">Password:</label>
+                <input type="password" id="password" required>
+                <button type="button" onclick="login()">Login</button>
+            </form>
+        </div>
+    </div>
+
     <!-- Add more sections or content as needed -->
 
+    <script src="script.js"></script>
 </body>
 </html>
