--- a/index.html
+++ b/index.html
@@ -3,46 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Development</title>
+    <title>Static Account System</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Game Development</h1>
-            <nav>
-                <a href="#home">Home</a>
-                <a href="#about">About</a>
-                <a href="#games">Games</a>
-                <a href="#contact">Contact</a>
-                <a href="#" id="loginBtn">Login</a>
-                <a href="#" id="logoutBtn" style="display: none;">Logout</a>
-            </nav>
-        </div>
-    </header>
+    <div class="container">
+        <h1>Static Account System</h1>
 
-    <section>
-        <h2>Welcome to Game Development!</h2>
-        <p>This is where you can showcase and discuss your game development projects.</p>
-    </section>
-
-    <!-- Login Modal -->
-    <div id="loginModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeLoginModal()">&times;</span>
+        <div id="login-form">
             <h2>Login</h2>
-            <form id="loginForm">
+            <form onsubmit="login(event)">
                 <label for="username">Username:</label>
-                <input type="text" id="username" required>
+                <input type="text" id="login-username" required>
+
                 <label for="password">Password:</label>
-                <input type="password" id="password" required>
-                <button type="button" onclick="login()">Login</button>
+                <input type="password" id="login-password" required>
+
+                <button type="submit">Login</button>
+            </form>
+        </div>
+
+        <div id="register-form">
+            <h2>Register</h2>
+            <form onsubmit="register(event)">
+                <label for="new-username">Username:</label>
+                <input type="text" id="new-username" required>
+
+                <label for="new-password">Password:</label>
+                <input type="password" id="new-password" required>
+
+                <button type="submit">Register</button>
             </form>
         </div>
     </div>
 
-    <!-- Add more sections or content as needed -->
-
+    <script src="crypto-js.js"></script> <!-- Include CryptoJS library -->
     <script src="script.js"></script>
 </body>
 </html>
