--- a/index.html
+++ b/index.html
@@ -3,41 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Static Account System</title>
+    <title>Game Development</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Static Account System</h1>
+    <header>
+        <div class="container">
+            <h1>Game Development</h1>
+            <nav>
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#games">Games</a>
+                <a href="#contact">Contact</a>
+                <button id="sign-out">Sign Out</button>
+            </nav>
+        </div>
+    </header>
 
-        <div id="login-form">
-            <h2>Login</h2>
-            <form onsubmit="login(event)">
-                <label for="username">Username:</label>
-                <input type="text" id="login-username" required>
-
-                <label for="password">Password:</label>
-                <input type="password" id="login-password" required>
-
-                <button type="submit">Login</button>
-            </form>
+    <section>
+        <div id="auth-container">
+            <h2>Authentication</h2>
+            <div id="firebaseui-auth-container"></div>
         </div>
 
-        <div id="register-form">
-            <h2>Register</h2>
-            <form onsubmit="register(event)">
-                <label for="new-username">Username:</label>
-                <input type="text" id="new-username" required>
+        <h2>Welcome to Game Development!</h2>
+        <p>This is where you can showcase and discuss your game development projects.</p>
+    </section>
 
-                <label for="new-password">Password:</label>
-                <input type="password" id="new-password" required>
+    <!-- Add more sections or content as needed -->
 
-                <button type="submit">Register</button>
-            </form>
-        </div>
-    </div>
-
-    <script src="crypto-js.js"></script> <!-- Include CryptoJS library -->
-    <script src="script.js"></script>
+    <!-- Include Firebase scripts -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.4/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.4/firebase-auth-ui.js"></script>
+    <script src="auth.js"></script>
 </body>
 </html>
