--- a/index.html
+++ b/index.html
@@ -34,8 +34,26 @@
 
     <!-- Include Firebase scripts -->
     <script src="https://www.gstatic.com/firebasejs/9.6.4/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.4/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.4/firebase-auth-ui.js"></script>
-    <script src="auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.4/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.4/firebase-auth-ui.js"></script>
+
+<script>
+  // Initialize Firebase with your project config
+  const firebaseConfig = {
+    apiKey: "AIzaSyDSDZLKas3k6Y3HEdhMBT7KSaP7g-pwwoc",
+    authDomain: "database-13806.firebaseapp.com",
+    projectId: "database-13806",
+    storageBucket: "database-13806.appspot.com",
+    messagingSenderId: "143871505578",
+    appId: "1:143871505578:web:8ac3cee27ea7cbc7680cd3",
+    measurementId: "G-XPPK82TVK4"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+</script>
+
+<!-- Include Firebase UI Auth script -->
+<script src="https://www.gstatic.com/firebasejs/9.6.4/firebase-auth-ui.js"></script>
+<script src="auth.js"></script>
 </body>
 </html>
