--- a/index.html
+++ b/index.html
@@ -3,51 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Development</title>
-    <script src="https://www.gstatic.com/firebasejs/9.6.4/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.4/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.4/firebase-auth-ui.js"></script>
-    <script>
-        const firebaseConfig = {
-            apiKey: "AIzaSyDSDZLKas3k6Y3HEdhMBT7KSaP7g-pwwoc",
-            authDomain: "database-13806.firebaseapp.com",
-            projectId: "database-13806",
-            storageBucket: "database-13806.appspot.com",
-            messagingSenderId: "143871505578",
-            appId: "1:143871505578:web:8ac3cee27ea7cbc7680cd3",
-            measurementId: "G-XPPK82TVK4"
-        };
-
-        firebase.initializeApp(firebaseConfig);
-    </script>
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="https://cdn.firebase.com/libs/firebaseui/4.8.0/firebaseui.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/4.8.0/firebaseui.css" />
+    <link rel="stylesheet" href="styles.css">
+    <title>Hacking Game</title>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Game Development</h1>
-            <nav>
-                <a href="#home">Home</a>
-                <a href="#about">About</a>
-                <a href="#games">Games</a>
-                <a href="#contact">Contact</a>
-                <button id="sign-out">Sign Out</button>
-            </nav>
-        </div>
-    </header>
-
-    <section>
-        <div id="auth-container">
-            <h2>Authentication</h2>
-            <div id="firebaseui-auth-container"></div>
-        </div>
-
-        <h2>Welcome to Game Development!</h2>
-        <p>This is where you can showcase and discuss your game development projects.</p>
-    </section>
-
-    <script src="auth.js"></script>
+    <div class="console"></div>
+    <button id="hackButton">Hack Now</button>
+    <script src="script.js"></script>
 </body>
 </html>
